[package]
name = "deepscene"
version = "0.1.0"
edition = "2024"
authors = ["Nima Naseri <nerdnull@proton.me>"]
license = "GPL-3.0"
description = "A command-line steganography tool that embeds files into images with optional encryption and compression, then extracts them losslessly"
repository = "https://github.com/naseridev/deepscene"
keywords = ["steganography", "cryptography", "image", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = "0.24"
flate2 = "1.0"
chacha20 = "0.9"
blake3 = "1.5"
rand = "0.8"
argon2 = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
